--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
     -->
     <title>React App</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7X9opLTmxQJT4SEvtea90bXDqm7OUZ2s"></script>
+</script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
