--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7X9opLTmxQJT4SEvtea90bXDqm7OUZ2s"></script>
-</script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfcFt2zs-5ODLk-Vb8tvgVEkfVFol8_HU"></script>
 
+<title>Plant It Forward</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
