navbar cleaned up

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
     
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDfcFt2zs-5ODLk-Vb8tvgVEkfVFol8_HU"></script>
-
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Indie Flower&display=swap');
+  </style>
 <title>Plant It Forward</title>
   </head>
   <body>
