--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="/dist/output.css" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -28,9 +30,7 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   
     
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=Indie Flower&display=swap');
-  </style>
+
 <title>Plant It Forward</title>
   </head>
   <body>
