--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href="/src/index.css" rel="stylesheet">
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+  crossorigin="anonymous"
+/>
+    <!-- <link href="/src/index.css" rel="stylesheet"> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- CSS only -->
     <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
